# modlee

./: .buildinfo  .gitignore  CNAME  Dockerfile  Makefile  Modlee_Exercise.ipynb  README.html  README.md  _setup.py  careers.html  examples_table.html  genindex.html  guides.html  index.html  interview_utils.py  misc.py  model.py  model.txt  model_text.txt  modlee  modlee.html  modlee.model.html  modlee.recommender.html  modlee_exercise.py  modlee_exercise_2.py  modlee_model.py  modlee_model.txt  modules.html  nx.json  objects.inv  optimizing_ml_guide.html  output_file1.txt  output_file2.txt  packages.dot  py-modindex.html  pylint.toml  pyproject.toml  pyproject_colab.toml  req_torch.txt  requirements.txt  (+11 more)
.github/workflows/: python-app.yml
.scratch/: add_labels_to_ecommerce.sh  rohit_text.py
_autosummary/: modlee.client.html  modlee.config.html  modlee.converter.html  modlee.data_metafeatures.html  modlee.exp_loss_logger.html  modlee.html  modlee.loss_sweeper.html  modlee.model.callbacks.html  modlee.model.html  modlee.model.image_model.html  modlee.model.model.html  modlee.model.recommended_model.html  modlee.model_text_converter.html  modlee.modlee_image_model.html  modlee.recommender.html  modlee.recommender.image_recommender.html  modlee.recommender.recommender.html  modlee.retriever.html  modlee.trainer.html  modlee.utils.html
_autosummary/<-- add this line/: modlee.auth.html  modlee.get_api_key.html  modlee.get_run_path.html  modlee.init.html  modlee.set_run_path.html  modlee.suppress_stdout_stderr.html
_modules/: index.html  modlee.html
_modules/modlee/: api_config.html  client.html  converter.html  data_metafeatures.html  dataframes.html  exp_loss_logger.html  recommender.html  (+6 more)
_sources/: README.rst.txt  examples_table.rst.txt  guides.rst.txt  index.rst.txt  modlee.recommender.rst.txt  modlee.rst.txt  modules.rst.txt  optimizing_ml_guide.rst.txt  troubleshooting.rst.txt  tutorial.rst.txt
_static/: custom.css
docs/: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  guides.md  internal.md  optimizing_ml_guide.md  support.md  troubleshooting.md  tutorial.md
examples/: README.md  audio_embeddings.ipynb  custom_training.ipynb  dataset_guidelines.ipynb  document.ipynb  document_exercise.ipynb  image_2_image.ipynb  image_embeddings.ipynb  image_regression.ipynb  image_segmentation.ipynb  model.py  model_definition_guidelines.ipynb  modlee_exercises.ipynb  modlee_image_example.py  recommend.ipynb  recommend_exercise.ipynb  simple_rep.py  simple_torch.py  simple_torch.rst  simple_torchmetrics.py  tabular_classification_example.ipynb  tabular_regression.ipynb  test_api.py  text_embeddings.ipynb  time_series_classification.ipynb  time_series_regression.ipynb
modlee/: Copy_of_ModleeExampleRunthrough.ipynb  __init__.py  api_client.py  config.py  converter.py  data_stats.py  demo.py  dev_data.py  dev_models.py  experiments.py  model_space.py  model_summary.py  model_text_converter.py  modlee_image_model.py  modlee_model.py  recommender.py  recommender_client.py  rep.py  retriever.py  scratch.py  test.py  test2.py  utils.py
modlee_interview_data/: traced_model.pt
modlee_pypi/: __init__.py  _data_stats.py  _model_summary.py  _setup.py  config.py  data.py  data_stats.py  dataset.py  dev_data.py  example_tools.py  experiments.py  log.py  mlflow_utils.py  model_space.py  model_summary.py  model_text_converter.py  modlee_model.py  prompt.py  rep.py  session.py  test2.py  utils.py
modules/: modlee.api_config.html  modlee.client.html  modlee.config.html  modlee.converter.html  modlee.data_metafeatures.html  modlee.dataframes.html  modlee.exp_loss_logger.html  modlee.html  modlee.loss_sweeper.html  modlee.model.callbacks.html  modlee.model.html  modlee.model.image_model.html  modlee.model.model.html  modlee.model.recommended_model.html  modlee.model.tabular_model.html  modlee.model.timeseries_model.html  modlee.model.trainer.html  modlee.model_metafeatures.html  modlee.model_text_converter.html  modlee.modlee_image_model.html  modlee.recommender.html  modlee.recommender.image_recommender.html  modlee.recommender.recommender.html  modlee.recommender.tabular_recommender.html  modlee.retriever.html  modlee.trainer.html  modlee.utils.html  modules.html
notebooks/: Modlee_Exercise.html  audio_embeddings.html  dataset_guidelines.html  document.html  document_exercise.html  image_2_image.html  image_embeddings.html  image_regression.html  image_segmentation.html  model_definition_guidelines.html  modlee_exercises.html  recommend.html  simple_rep.py  simple_torch.html  simple_torch.py  tabular_classification_example.html  tabular_regression.html  text_embeddings.html  time_series_classification.html  time_series_forecasting.html  time_series_regression.html
src/: monkeytype.sqlite3
tests/: __init__.py  cached_image_metafeatures.tsv  concat_labels.txt  conftest.py  data_labels.txt  image_features_cache_0.csv  image_labels.txt  labels_test.txt  metafeatures.ipynb  metafeatures.py  metafeatures_bak.ipynb  model_labels.txt  model_metafeatures_test.py  model_mf_labels.txt  test_api_client.py  test_callbacks.py  test_client.py  test_conversion_pipeline.py  test_converter.py  test_data_metafeatures.py  test_model.py  test_model_metafeatures.py  test_modlee.py  test_recommender.py  test_recommender_client.py  test_retriever.py  test_retriever.yaml  test_tests.py  test_timeseries.ipynb  test_utils.py  testin.py  text_features_cache.csv  text_metafeatures.tsv  text_metafeatures_normalized.tsv  text_metafeatures_normalized_embd.tsv  text_metafeatures_normalized_mfe.tsv
tests_depreciated/: cached_text_metafeatures.tsv  concat_features.tsv  conftest.py  image_features_cache.csv  init_dep.py  metafeatures.ipynb  model_embd.tsv  model_metafeatures.csv  model_props_embd.tsv  test_callbacks.py  test_converter.py  testin.py
(+228 files in other folders)
