[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modlee"
version = "0.0.2-22"
authors = [{ name = "modlee", email = "michael@modlee.ai" }]
description = "modlee package"
readme = "docs/README.md"
license = {file = "docs/LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "lightning==2.3.3",
    "mlflow>=2.6.0",
    "networkx==2.6.3",
    "numpy==1.26.4",
    "pydantic==2.8.2",
    "setuptools>=68.0.0",
    "torch==2.3.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.17.0",
    "torchtext==0.18.0",
    "portalocker",
    "torchdata",
    "spacy",
    "onnx>=1.14.1",
    "torchsummary==1.5.1",
    "modlee-onnx2torch==1.5.15",
    "modlee-onnx_graphsurgeon==0.3.27",
    # "pymfe==0.4.2",
    "pymfe",
    "pytest==8.1.1",
    "nbsphinx",
    "sphinx-rtd-theme",
    # "karateclub==1.3.3",
    # "karateclub",
    "karateclub==1.3.0",
    "scipy==1.12.0",
    "pydot==2.0.0",
    "transformers==4.41.0", 
    "wonderwords",
]

[project.optional-dependencies]
timeseries = ["pytorch_forecasting"]
tabular = ["pytorch_tabular"]

[project.urls]
"Homepage" = "https://www.modlee.ai"
"Source" = "https://www.github.com/modlee-ai/modlee"

[tool.setuptools.package-data]
modlee = ["*.pkl","*.csv"]

[tool.setuptools.dynamic]
dependencies = {file = "req_torch.txt"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -k 'not (training or deprecated or server or experimental)'"
markers = ["training", "deprecated", "server", "experimental"]

[tool.black]
verbose = true

[tool.pylint]
output-format = "colorized"
recursive = true
reports = true
source-roots = ["./src/modlee"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
# Possible choices: ['sphinx', 'epytext', 'google', 'numpy', 'default']
default-docstring-type = "google"
