[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modleestaging"
version = "0.0.11"
authors = [{ name = "modlee", email = "brad@modlee.ai" }]
description = "modlee package"
readme = "docs/README.md"
license = { file = "docs/LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "pytorch-lightning==2.4.0",
    "lightning==2.3.3",
    "mlflow==2.16.2",#2.16.3
    "networkx==2.6.3",
    "numpy==1.26.4",
    "pydantic==2.8.2",
    "setuptools>=68.0.0",
    "torch==2.3.0",
    "torchmetrics==1.4.2",#1.4.2
    "torchvision==0.18.0",#0.18.0
    "torchtext==0.18.0",
    "torchaudio==2.3.0",
    "portalocker==2.10.1",#2.10.1
    "torchdata==0.8.0",#0.8.0
    "spacy==3.7.6",#3.7.6
    "onnx==1.16.2",#1.16.2
    "torchsummary==1.5.1",
    "modlee-onnx2torch==1.5.15",
    "modlee-onnx_graphsurgeon==0.3.27",
    # "pymfe==0.4.2",
    "pymfe==0.4.3",#==0.4.3
    #"pytest==8.1.1",
    #"nbsphinx",
    #"sphinx-rtd-theme",
    # "karateclub==1.3.3",
    # "karateclub",
    #"karateclub==1.3.0",
    "scipy==1.12.0",
    "pydot==2.0.0",
    "transformers==4.41.0", 
    "wonderwords",
]


[project.optional-dependencies]
testing = ["pytest==8.1.1"]
docs = ["nbsphinx","sphinx-rtd-theme"]

[project.urls]
"Homepage" = "https://www.modlee.ai"
"Source" = "https://www.github.com/modlee-ai/modlee"

[tool.setuptools.package-data]
modlee = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -k 'not (training or deprecated or server or experimental)'"
markers = ["training", "deprecated", "server", "experimental"]

[tool.black]
verbose = true

[tool.pylint]
output-format = "colorized"
recursive = true
reports = true
source-roots = ["./src/modlee"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"
